--- a/Little Lemon Reserve-a-Table (Meta Front-End Developer Capstone)/little-lemon-reserve-a-table/src/Components/Footer.css
+++ b/Little Lemon Reserve-a-Table (Meta Front-End Developer Capstone)/little-lemon-reserve-a-table/src/Components/Footer.css
@@ -44,13 +44,9 @@
 
 @media only screen and (max-width: 52em) {
     .PageFooter {
-        flex-direction: column;
-        width: 25em;
-        padding: 0 calc(50% - 12.5em);
-    }
-
-    .PageFooter section {
-        align-items: center;
+        flex-wrap: wrap;
+        width: calc(100% - 2em);
+        padding: 0 1em;
     }
 
     .PageFooter section menu {
