--- a/Little Lemon Reserve-a-Table (Meta Front-End Developer Capstone)/little-lemon-reserve-a-table/src/Pages/Homepage.css
+++ b/Little Lemon Reserve-a-Table (Meta Front-End Developer Capstone)/little-lemon-reserve-a-table/src/Pages/Homepage.css
@@ -1,5 +1,5 @@
 main {
     display: flex;
     flex-direction: column;
-    margin: 1em auto;
+    margin: 0 auto;
 }
